contact form re css

--- a/castledef2.html
+++ b/castledef2.html
@@ -28,10 +28,10 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html" id="active" class="navlink"aria-label="Go to Lackeen Castle home page">Home</a>
+                    <a href="index.html"  class="navlink"aria-label="Go to Lackeen Castle home page">Home</a>
                 </li>
                 <li>
-                    <a href="castledef2.html" class="navlink" aria-label="Go to the castle defences page"> Defences</a>
+                    <a href="castledef2.html" id="active"class="navlink" aria-label="Go to the castle defences page"> Defences</a>
                 </li>
                 <li>
                     <a href="stowemissal.html" class="navlink" aria-label="Go to the Stowe Missal page">Stowe Missal</a>
@@ -49,14 +49,11 @@
     <section id="defence-outer">
         <div class="castle-defence-background"></div>
 
-        <div id="info-text-intro" class="zoom">
-            <h2> defending Lackeen</h2>
+        <div id="defence-intro" >
+            <h3> Defending Lackeen</h3>
 
             <p>Ireland was a dangerous place 1,000 years ago. Defence was key in castle design to protect the owner from
-                unfriendly clans and Norman invaders. Here are some defence features in Lackeen Castle.</p>
-
-
-
+                unfriendly clans and Norman invaders. Here are some typical medieval defence features to be seen in Lackeen Castle.</p>
 
 
         </div>
@@ -67,27 +64,26 @@
 
 
         </div>
-        <div id="info-text-mach" class="zoom">
-            <h2><i class="fas fa-arrow-up"></i> Machicolations</h2>
+        <div id="defence-mach" class="zoom">
+            <h3><i class="fas fa-arrow-up"></i> Machicolations</h3>
             <p>Defenders threw rocks, hot sand, tar and boiling liquids on the invaders below from these holes in the
                 floor of the castle rooftop.</p>
 
 
 
+        </div>
+
+        <div id="defence-window" class="zoom">
+            <h3> Narrow Windows  <i
+                class="fas fa-arrow-right"></i></h3>
+
+            <p>Defenders shot arrows and charges from inside at invaders, with slim chance of getting hit in return. </p>
 
 
         </div>
-        <div id="info-text-window" class="zoom">
-            <h2> Narrow Windows  <i
-                class="fas fa-arrow-right"></i></h2>
-
-            <p>For shooting arrows and bullets at invaders without getting hit in return. </p>
-
-
-        </div>
-        <div id="info-text-door" class="zoom">
-            <h2> Murder Hole  <i
-                class="fas fa-arrow-right"></i></h2>
+        <div id="defence-door" class="zoom">
+            <h3> Murder Hole  <i
+                class="fas fa-arrow-right"></i></h3>
 
             <p>Defenders hid in a hole above the door to attack invaders who bypassed the arrows, rocks and
                 boiling liquids. Did the ghost of Lackeen die here....?
