fix stowe missal pics

--- a/stowemissal.html
+++ b/stowemissal.html
@@ -57,7 +57,7 @@
 
     </section>
 
-    <section id="about-sm" aria-labelledby="about-sm-text about-sm-image">
+    <section id="about-sm" >
         <h2>About the Stowe Missal ......</h2>
 
         <div id="about-sm-text">
@@ -76,18 +76,19 @@
                     Irish Academy</a> in Dublin. </p>
 
         </div>
+    
 
 
-
+    
 
         <div id="about-sm-image">
             <img src="assets/images/sm-fpage.jpg" alt="First page of Stowe Missal manuscript">
             <div class="desc">First page of the Stowe Missal manuscript.</div>
         </div>
-        </div>
+        </section>
 
 
-
+<section id="sm-cover">
         <div id="about-sm-cover-image">
 
             <img src="assets/images/sm-cover.jpg" alt="front cover of Stowe Missal jewelled storage box">
