resizing to 850px and lower

--- a/stowemissal.html
+++ b/stowemissal.html
@@ -60,7 +60,7 @@
     <section id="about-sm" >
         <h2>About the Stowe Missal ......</h2>
 
-        <div id="about-sm-text">
+        <div id="sm-text">
 
             <p>This diminutive hand-written prayer book, in its ornate storage box, was found in the
                 walls of Lackeen Castle 300 years ago. The 1,000 year old book must have been hidden for hundereds of
@@ -81,21 +81,20 @@
 
     
 
-        <div id="about-sm-image">
+        <div id="sm-image">
             <img src="assets/images/sm-fpage.jpg" alt="First page of Stowe Missal manuscript">
             <div class="desc">First page of the Stowe Missal manuscript.</div>
         </div>
-        </section>
+        
 
 
-<section id="sm-cover">
-        <div id="about-sm-cover-image">
+        <div id="cover-image">
 
             <img src="assets/images/sm-cover.jpg" alt="front cover of Stowe Missal jewelled storage box">
             <div class="desc">Front of the Stowe Missal reliquary or storage box.</div>
         </div>
 
-        <div id="about-sm-cover-text">
+        <div id="cover-text">
             <p> The storage box or reliquary, older than the book it contains, is a stunning piece of Celtic
                 crafsmanship and
                 has the names of several important chieftains and monks engraved in the precious metals, which gives us
