sizing for screens 450 and down

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
                 </div>
                 <br>
                 <br>
-                <input type="submit" value="Submit" id="submit">
+                <input type="submit" value="Book Now!" id="submit">
             </form>
         </div>
     
