--- a/castledef2.html
+++ b/castledef2.html
@@ -28,15 +28,16 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html"  class="navlink" aria-label="Go to Lackeen Castle home page">Home</a>
+                    <a href="index.html" class="navlink" aria-label="Go to Lackeen Castle home page">Home</a>
                 </li>
                 <li>
-                    <a href="castledef2.html" id="active"class="navlink" aria-label="Go to the castle defences page"> Defences</a>
+                    <a href="castledef2.html" id="active" class="navlink" aria-label="Go to the castle defences page">
+                        Defences</a>
                 </li>
                 <li>
                     <a href="stowemissal.html" class="navlink" aria-label="Go to the Stowe Missal page">Stowe Missal</a>
                 </li>
-                
+
                 <li>
                     <a href="contact.html" class="navlink" aria-label="Go to the booking page">Tours</a>
                 </li>
@@ -49,16 +50,17 @@
     <section id="defence-outer">
         <div class="castle-defence-background"></div>
 
-        <div id="defence-intro" >
+        <div id="defence-intro">
             <h3> Defending Lackeen</h3>
 
             <p>Ireland was a dangerous place 1,000 years ago. Defence was key in castle design to protect the owner from
-                unfriendly clans and Norman invaders. Here are some typical medieval defence features to be seen in Lackeen Castle.</p>
+                unfriendly clans and Norman invaders. Here are some typical medieval defence features to be seen in
+                Lackeen Castle.</p>
 
 
         </div>
 
-        
+
 
 
 
@@ -74,16 +76,15 @@
         </div>
 
         <div id="defence-window" class="zoom">
-            <h3> Narrow Windows  <i
-                class="fas fa-arrow-right"></i></h3>
+            <h3> Narrow Windows <i class="fas fa-arrow-right"></i></h3>
 
-            <p>Defenders shot arrows and charges from inside at invaders, with slim chance of getting hit in return. </p>
+            <p>Defenders shot arrows and charges from inside at invaders, with slim chance of getting hit in return.
+            </p>
 
 
         </div>
         <div id="defence-door" class="zoom">
-            <h3> Murder Hole  <i
-                class="fas fa-arrow-right"></i></h3>
+            <h3> Murder Hole <i class="fas fa-arrow-right"></i></h3>
 
             <p>Defenders hid in a hole above the door to attack invaders who bypassed the arrows, rocks and
                 boiling liquids. Did the ghost of Lackeen die here....?
