--- a/stowemissal.html
+++ b/stowemissal.html
@@ -99,22 +99,25 @@
 
         <div id="cover-image">
 
-            <img src="assets/images/sm-cover-both.jpg" class="center" alt="front cover of Stowe Missal jewelled storage box">
+            <img src="assets/images/sm-cover-both.jpg" class="center"
+                alt="front cover of Stowe Missal jewelled storage box">
             <div class="desc">Front of the Stowe Missal reliquary or storage box.</div>
 
         </div>
-        
-    </section>
+
+    
     <div id="final-line">
-        <p>And the final ancient handwritten words in this precious book is our message to all who come this way......</p>
+        <p>And the final ancient handwritten words in this precious book is our message to all who come this way......
+        </p>
         <br>
         <br>
-        <img src="assets/images/sm-signoff.jpg" class="center" alt="last line of manuscript wishing reader health" class="center">
+        <img src="assets/images/sm-signoff.jpg" class="center" alt="last line of manuscript wishing reader health"
+            class="center">
         <div class="desc">Final line of the Stowe Missal, written in Gaelic and Ogham, wishing the reader good
             health.
         </div>
     </div>
-
+</section>
 
 
 
